--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,113 +3,163 @@
 
 @string{aps = {American Physical Society,}}
 
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
+Dixit S, Low DM, Elbanna G, Catania F, Ghosh SS (2024). Explaining deep learning embeddings for speech emotion recognition by predicting interpretable acoustic variables. Arxiv.
+
+
+@article{dixit2024embeddings,
+  title={Identifying bias in models that detect vocal fold paralysis from audio recordings using explainable machine learning and clinician ratings},
+  author={Dixit, Satvik and Low, Daniel M Elbanna, Gasser and Catania, Fabio and Ghosh, Satrajit S},
+  journal={ArXiv},
+  year={2024},
 }
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+
+@article{lomlomdjian2017right,
+  title={The right hemisphere’s contribution to discourse processing: A study in temporal lobe epilepsy},
+  author={Lomlomdjian, Carolina and M{\'u}nera, Claudia P and Low, Daniel M and Terpiluk, Ver{\'o}nica and Sol{\'\i}s, Patricia and Abusamra, Valeria and Kochen, Silvia},
+  journal={Brain and Language},
+  volume={171},
+  pages={31--41},
+  year={2017},
+  publisher={Academic Press}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+@article{low2020automated,
+  title={Automated assessment of psychiatric disorders using speech: A systematic review},
+  author={Low, DM and Bentley, KH and Ghosh, SS},
+  journal={Laryngoscope Investigative Otolaryngology},
+  volume={5},
+  number={1},
+  pages={96--116},
+  year={2020}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
-  selected={true},
-  inspirehep_id = {3255}
+@article{torrente2021sooner,
+  title={Sooner than you think: A very early affective reaction to the COVID-19 pandemic and quarantine in Argentina},
+  author={Torrente, Fernando and Yoris, A and Low, DM and Lopez, Pablo and Bekinschtein, Pedro and Manes, F and Cetkovich, M},
+  journal={Journal of affective disorders},
+  volume={282},
+  pages={495--503},
+  year={2021},
+  publisher={Elsevier}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@article{abusamra2020cognitive,
+  title={Cognitive Skills Involved in Reading Comprehension of Adolescents with Low Educational Opportunities},
+  author={Abusamra, Valeria and Difalcis, Micaela and Mart{\'\i}nez, Gisela and Low, Daniel M and Formoso, Jesica},
+  journal={Languages},
+  volume={5},
+  number={3},
+  pages={34},
+  year={2020}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@article{low2020natural,
+  title={Natural Language Processing Reveals Vulnerable Mental Health Support Groups and Heightened Health Anxiety on Reddit during COVID-19: Observational Study},
+  author={Low, Daniel M and Laurie, Rumker and Talkar, Tanya and Torous, John and Cecchi, Guillermo and Ghosh, Satra S},
+  journal={Journal of Medical Internet Research},
+  volume={22},
+  number={10},
+  year={2020}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@article{torrente2022psychological,
+  title={Psychological symptoms, mental fatigue and behavioural adherence after 72 continuous days of strict lockdown during the COVID-19 pandemic in Argentina},
+  author={Torrente, Fernando and Yoris, Adrian and Low, Daniel and Lopez, Pablo and Bekinschtein, Pedro and V{\'a}zquez, Gustavo H and Manes, Facundo and Cetkovich, Marcelo},
+  journal={BJPsych open},
+  volume={8},
+  number={1},
+  pages={e10},
+  year={2022},
+  publisher={Cambridge University Press}
 }
 
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
+@article{husain2022artificial,
+  title={Artificial intelligence for detecting covid-19 with the aid of human cough, breathing and speech signals: Scoping review},
+  author={Husain, Mouzzam and Simpkin, Andrew and Gibbons, Claire and Talkar, Tanya and Low, Daniel and Bonato, Paolo and Ghosh, Satrajit S and Quatieri, Thomas and O'Keeffe, Derek T},
+  journal={IEEE Open Journal of Engineering in Medicine and Biology},
+  volume={3},
+  pages={235--241},
+  year={2022},
+  publisher={IEEE}
 }
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
+@article{acunzo2022deep,
+  title={Deep neural networks reveal topic-level representations of sentences in medial prefrontal cortex, lateral anterior temporal lobe, precuneus, and angular gyrus},
+  author={Acunzo, David J and Low, Daniel M and Fairhall, Scott L},
+  journal={NeuroImage},
+  volume={251},
+  pages={119005},
+  year={2022},
+  publisher={Academic Press}
+}
+
+@article{torrente2022risk,
+  title={Risk perception, but also political orientation, modulate behavioral response to COVID-19: a randomized survey experiment},
+  author={Torrente, F and Low, D M and Yoris, A},
+  journal={Frontiers in Psychology},
+  volume={13},
+  year={2022}
+}
+
+@article{talkar2023dissociating,
+  title={Dissociating COVID-19 from other respiratory infections based on acoustic, motor coordination, and phonemic patterns},
+  author={Talkar, Tanya and Low, Daniel M and Simpkin, Andrew J and Ghosh, Satrajit and O’Keeffe, Derek T and Quatieri, Thomas F},
+  journal={Scientific Reports},
+  volume={13},
+  number={1},
+  pages={1567},
+  year={2023},
+  publisher={Nature Publishing Group UK London}
+}
+
+@article{fusaroli2023identifying,
+  title={Identifying medications underlying communication atypicalities in psychotic and affective disorders: a pharmacovigilance study within the FDA Adverse Event Reporting System},
+  author={Fusaroli, Michele and Simonsen, Arndis and Borrie, Stephanie A and Low, Daniel M and Parola, Alberto and Raschi, Emanuel and Poluzzi, Elisabetta and Fusaroli, Riccardo},
+  journal={Journal of Speech, Language, and Hearing Research},
+  volume={66},
+  number={9},
+  pages={3242--3259},
+  year={2023},
+  publisher={American Speech-Language-Hearing Association}
+}
+
+@article{zuromski2024detecting,
+  title={Detecting suicide risk among US Servicemembers and Veterans: A deep learning approach using social media data},
+  author={Zuromski, Kelly L and Low, Daniel M and Jones, Noah and Kuzma, Richard and Kessler, Daniel T and Zhou, Liutong and Kastman, EK and Epstein, Jonathan and Madden, Carlos and Ghosh, SS and others},
+  journal={Psychological Medicine},
+  year={2024}
+}
+
+@phdthesis{low2024speech,
+  title={Speech and text psychometrics: Identifying suicide risk factors with large language models and acoustic networks},
+  author={Low, Daniel Mark},
+  year={2024}
+}
+
+@article{low2024identifying,
+  title={Identifying bias in models that detect vocal fold paralysis from audio recordings using explainable machine learning and clinician ratings},
+  author={Low, Daniel M and Rao, Vishwanatha and Randolph, Gregory and Song, Phillip C and Ghosh, Satrajit S},
+  journal={PLOS Digital Health},
+  volume={3},
+  number={5},
+  pages={e0000516},
+  year={2024},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
+
+@inproceedings{abdou2019higher,
+  title={Higher-order Comparisons of Sentence Encoder Representations},
+  author={Abdou, Mostafal and Kulmizev, Artur and Hill, Felix and Low, Daniel M and Sogaard, Anders},
+  booktitle={EMNLP},
+  pages={5838--5845},
+  year={2019}
+}
+
+@inproceedings{low2021s,
+  title={It’s quality and quantity: the effect of the amount of comments on online suicidal posts},
+  author={Low, Daniel M and Zuromski, Kelly L and Kessler, Daniel and Ghosh, Satrajit S and Nock, Matthew and Dempsey, Walter},
+  booktitle={Proceedings of the First Workshop on Causal Inference and NLP at EMNLP},
+  pages={95--103},
+  year={2021}
 }
