--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -134,8 +134,8 @@ Dixit S, Low DM, Elbanna G, Catania F, Ghosh SS (2024). Explaining deep learning
 @phdthesis{low2024speech,
   title={Speech and text psychometrics: Identifying suicide risk factors with large language models and acoustic networks},
   author={Low, Daniel M.},
-  school= {Harvard University},
-  type={PhD Dissertation},  % You can explicitly mention this if needed
+  school={Harvard University},
+  type={PhD Dissertation},  
   year={2024}
 }
 
