--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,6 +11,7 @@ Dixit S, Low DM, Elbanna G, Catania F, Ghosh SS (2024). Explaining deep learning
   author={Dixit, Satvik and Low, Daniel M Elbanna, Gasser and Catania, Fabio and Ghosh, Satrajit S},
   journal={ArXiv},
   year={2024},
+  abbr={ExplainableML, Speech, Emotion}
 }
 
 
@@ -31,7 +32,9 @@ Dixit S, Low DM, Elbanna G, Catania F, Ghosh SS (2024). Explaining deep learning
   volume={5},
   number={1},
   pages={96--116},
-  year={2020}
+  year={2020},
+  preview={figure3_heatmap.jpeg},
+  abbr={Speech}
 }
 
 @article{torrente2021sooner,
@@ -60,7 +63,9 @@ Dixit S, Low DM, Elbanna G, Catania F, Ghosh SS (2024). Explaining deep learning
   journal={Journal of Medical Internet Research},
   volume={22},
   number={10},
-  year={2020}
+  year={2020},
+  preview={covid_covid19_boolean.jpg},
+  abbr={NLP, Social Media}
 }
 
 @article{torrente2022psychological,
@@ -92,6 +97,7 @@ Dixit S, Low DM, Elbanna G, Catania F, Ghosh SS (2024). Explaining deep learning
   pages={119005},
   year={2022},
   publisher={Academic Press}
+  abbr={NLP, fMRI}
 }
 
 @article{torrente2022risk,
@@ -163,5 +169,6 @@ Dixit S, Low DM, Elbanna G, Catania F, Ghosh SS (2024). Explaining deep learning
   author={Low, Daniel M and Zuromski, Kelly L and Kessler, Daniel and Ghosh, Satrajit S and Nock, Matthew and Dempsey, Walter},
   booktitle={Proceedings of the First Workshop on Causal Inference and NLP at EMNLP},
   pages={95--103},
-  year={2021}
+  year={2021},
+  preview={dag.png}
 }
