--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -96,7 +96,7 @@ Dixit S, Low DM, Elbanna G, Catania F, Ghosh SS (2024). Explaining deep learning
   volume={251},
   pages={119005},
   year={2022},
-  publisher={Academic Press}
+  publisher={Academic Press},
   abbr={NLP, fMRI}
 }
 
