--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,7 +8,7 @@ Dixit S, Low DM, Elbanna G, Catania F, Ghosh SS (2024). Explaining deep learning
 
 @article{dixit2024embeddings,
   title={Identifying bias in models that detect vocal fold paralysis from audio recordings using explainable machine learning and clinician ratings},
-  author={Dixit, Satvik and Low, Daniel M Elbanna, Gasser and Catania, Fabio and Ghosh, Satrajit S},
+  author={Dixit, Satvik and Low, Daniel M and Elbanna, Gasser and Catania, Fabio and Ghosh, Satrajit S},
   journal={ArXiv},
   year={2024},
   abbr={ExplainableML, Speech, Emotion}
