--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,15 +3,12 @@
 
 @string{aps = {American Physical Society,}}
 
-Dixit S, Low DM, Elbanna G, Catania F, Ghosh SS (2024). Explaining deep learning embeddings for speech emotion recognition by predicting interpretable acoustic variables. Arxiv.
-
-
 @article{dixit2024embeddings,
   title={Identifying bias in models that detect vocal fold paralysis from audio recordings using explainable machine learning and clinician ratings},
   author={Dixit, Satvik and Low, Daniel M and Elbanna, Gasser and Catania, Fabio and Ghosh, Satrajit S},
   journal={ArXiv},
   year={2024},
-  abbr={ExplainableML, Speech, Emotion}
+  abbr={ExplainableML & Voice}
 }
 
 
@@ -22,7 +19,8 @@ Dixit S, Low DM, Elbanna G, Catania F, Ghosh SS (2024). Explaining deep learning
   volume={171},
   pages={31--41},
   year={2017},
-  publisher={Academic Press}
+  publisher={Academic Press},
+  abbr={Neuropsychology}
 }
 
 @article{low2020automated,
@@ -44,7 +42,7 @@ Dixit S, Low DM, Elbanna G, Catania F, Ghosh SS (2024). Explaining deep learning
   volume={282},
   pages={495--503},
   year={2021},
-  publisher={Elsevier}
+  publisher={Elsevier},
 }
 
 @article{abusamra2020cognitive,
@@ -54,7 +52,8 @@ Dixit S, Low DM, Elbanna G, Catania F, Ghosh SS (2024). Explaining deep learning
   volume={5},
   number={3},
   pages={34},
-  year={2020}
+  year={2020},
+  abbr={Disparities}
 }
 
 @article{low2020natural,
@@ -65,7 +64,7 @@ Dixit S, Low DM, Elbanna G, Catania F, Ghosh SS (2024). Explaining deep learning
   number={10},
   year={2020},
   preview={covid_covid19_boolean.jpg},
-  abbr={NLP, Social Media}
+  abbr={NLP & Social Media}
 }
 
 @article{torrente2022psychological,
@@ -86,7 +85,9 @@ Dixit S, Low DM, Elbanna G, Catania F, Ghosh SS (2024). Explaining deep learning
   volume={3},
   pages={235--241},
   year={2022},
-  publisher={IEEE}
+  publisher={IEEE},
+  
+  
 }
 
 @article{acunzo2022deep,
@@ -97,7 +98,7 @@ Dixit S, Low DM, Elbanna G, Catania F, Ghosh SS (2024). Explaining deep learning
   pages={119005},
   year={2022},
   publisher={Academic Press},
-  abbr={NLP, fMRI}
+  abbr={NLP & fMRI}
 }
 
 @article{torrente2022risk,
@@ -127,14 +128,15 @@ Dixit S, Low DM, Elbanna G, Catania F, Ghosh SS (2024). Explaining deep learning
   number={9},
   pages={3242--3259},
   year={2023},
-  publisher={American Speech-Language-Hearing Association}
+  publisher={American Speech-Language-Hearing Association},
 }
 
 @article{zuromski2024detecting,
   title={Detecting suicide risk among US Servicemembers and Veterans: A deep learning approach using social media data},
   author={Zuromski, Kelly L and Low, Daniel M and Jones, Noah and Kuzma, Richard and Kessler, Daniel T and Zhou, Liutong and Kastman, EK and Epstein, Jonathan and Madden, Carlos and Ghosh, SS and others},
   journal={Psychological Medicine},
-  year={2024}
+  year={2024},
+  abbr={NLP & social media}
 }
 
 @phdthesis{low2024speech,
@@ -153,7 +155,8 @@ Dixit S, Low DM, Elbanna G, Catania F, Ghosh SS (2024). Explaining deep learning
   number={5},
   pages={e0000516},
   year={2024},
-  publisher={Public Library of Science San Francisco, CA USA}
+  publisher={Public Library of Science San Francisco, CA USA},
+  abbr={ExplainableML & Bias} 
 }
 
 @inproceedings{abdou2019higher,
@@ -161,7 +164,8 @@ Dixit S, Low DM, Elbanna G, Catania F, Ghosh SS (2024). Explaining deep learning
   author={Abdou, Mostafal and Kulmizev, Artur and Hill, Felix and Low, Daniel M and Sogaard, Anders},
   booktitle={EMNLP},
   pages={5838--5845},
-  year={2019}
+  year={2019},
+  abbr={ExplainableML},
 }
 
 @inproceedings{low2021s,
@@ -170,5 +174,6 @@ Dixit S, Low DM, Elbanna G, Catania F, Ghosh SS (2024). Explaining deep learning
   booktitle={Proceedings of the First Workshop on Causal Inference and NLP at EMNLP},
   pages={95--103},
   year={2021},
-  preview={dag.png}
+  preview={dag.png},
+  abbr={Causal Inference & NLP},
 }
