--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,7 +8,7 @@
   author={Dixit, Satvik and Low, Daniel M and Elbanna, Gasser and Catania, Fabio and Ghosh, Satrajit S},
   journal={ArXiv},
   year={2024},
-  abbr={ExplainableML & Voice}
+  abbr={Explainable ML}
 }
 
 
@@ -43,6 +43,7 @@
   pages={495--503},
   year={2021},
   publisher={Elsevier},
+  abbr={Mental health},
 }
 
 @article{abusamra2020cognitive,
@@ -64,7 +65,7 @@
   number={10},
   year={2020},
   preview={covid_covid19_boolean.jpg},
-  abbr={NLP & Social Media}
+  abbr={Social media}
 }
 
 @article{torrente2022psychological,
@@ -75,7 +76,8 @@
   number={1},
   pages={e10},
   year={2022},
-  publisher={Cambridge University Press}
+  publisher={Cambridge University Press},
+  abbr={Mental health}
 }
 
 @article{husain2022artificial,
@@ -86,8 +88,8 @@
   pages={235--241},
   year={2022},
   publisher={IEEE},
-  
-  
+  abbr={Voice biomarker},
+
 }
 
 @article{acunzo2022deep,
@@ -106,7 +108,8 @@
   author={Torrente, F and Low, D M and Yoris, A},
   journal={Frontiers in Psychology},
   volume={13},
-  year={2022}
+  year={2022},
+  abbr={Public health},
 }
 
 @article{talkar2023dissociating,
@@ -117,7 +120,8 @@
   number={1},
   pages={1567},
   year={2023},
-  publisher={Nature Publishing Group UK London}
+  publisher={Nature Publishing Group UK London},
+  abbr={Voice biomarker}
 }
 
 @article{fusaroli2023identifying,
@@ -129,6 +133,7 @@
   pages={3242--3259},
   year={2023},
   publisher={American Speech-Language-Hearing Association},
+  abbr={Causal Inference}
 }
 
 @article{zuromski2024detecting,
@@ -136,7 +141,7 @@
   author={Zuromski, Kelly L and Low, Daniel M and Jones, Noah and Kuzma, Richard and Kessler, Daniel T and Zhou, Liutong and Kastman, EK and Epstein, Jonathan and Madden, Carlos and Ghosh, SS and others},
   journal={Psychological Medicine},
   year={2024},
-  abbr={NLP & social media}
+  abbr={Social media}
 }
 
 @phdthesis{low2024speech,
@@ -144,7 +149,8 @@
   author={Low, Daniel M.},
   school={Harvard University},
   type={PhD Dissertation},  
-  year={2024}
+  year={2024},
+  abbr={PhD Dissertation},
 }
 
 @article{low2024identifying,
@@ -156,7 +162,7 @@
   pages={e0000516},
   year={2024},
   publisher={Public Library of Science San Francisco, CA USA},
-  abbr={ExplainableML & Bias} 
+  abbr={ExplainableML} 
 }
 
 @inproceedings{abdou2019higher,
@@ -175,5 +181,5 @@
   pages={95--103},
   year={2021},
   preview={dag.png},
-  abbr={Causal Inference & NLP},
+  abbr={Causal Inference},
 }
