--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,11 +2,11 @@
 @string{aps = {American Physical Society,}}
 
 @article{dixit2024embeddings,
-  title={Identifying bias in models that detect vocal fold paralysis from audio recordings using explainable machine learning and clinician ratings},
+  title={Explaining Deep Learning Embeddings for Speech Emotion Recognition by Predicting Interpretable Acoustic Features},
   author={Dixit, Satvik and Low, Daniel M and Elbanna, Gasser and Catania, Fabio and Ghosh, Satrajit S},
   journal={ArXiv},
   year={2024},
-  abbr={Explainable ML}
+  abbr={Emotion}
 }
 
 
@@ -30,7 +30,6 @@
   pages={96--116},
   year={2020},
   preview={figure3_heatmap.jpeg},
-  abbr={Speech}
 }
 
 @article{torrente2021sooner,
@@ -139,7 +138,7 @@
   author={Zuromski, Kelly L and Low, Daniel M and Jones, Noah and Kuzma, Richard and Kessler, Daniel T and Zhou, Liutong and Kastman, EK and Epstein, Jonathan and Madden, Carlos and Ghosh, SS and others},
   journal={Psychological Medicine},
   year={2024},
-  abbr={Social media}
+  abbr={NLP+social media}
 }
 
 @phdthesis{low2024speech,
@@ -179,5 +178,5 @@
   pages={95--103},
   year={2021},
   preview={dag.png},
-  abbr={Causal Inference},
+  abbr={Causal Inference+NLP},
 }
