--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,15 @@
 @string{aps = {American Physical Society,}}
 
+@article{chen2024reproschema,
+  author    = {Y. Chen and D. Jarecka and S. A. Abraham and R. Gau and E. Ng and D. M. Low and I. Bevers and A. Johnson and A. Keshavan and A. Klein and J. Clucas and Z. Rosli and S. M. Hodge and J. Linkersdörfer and H. Bartsch and S. Das and D. Fair and D. Kennedy and S. S. Ghosh},
+  title     = {ReproSchema: Enhancing Research Reproducibility through Standardized Survey Data Collection},
+  journal   = {JMIR Preprints},
+  year      = {2024},
+  volume    = {63343},
+  abbr={Reproducibility},
+}
+
+
 @article{dixit2024embeddings,
   title={Explaining Deep Learning Embeddings for Speech Emotion Recognition by Predicting Interpretable Acoustic Features},
   author={Dixit, Satvik and Low, Daniel M and Elbanna, Gasser and Catania, Fabio and Ghosh, Satrajit S},
