--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,6 +7,8 @@
   year      = {2024},
   volume    = {63343},
   abbr={Reproducibility},
+  preprint={https://preprints.jmir.org/preprint/63343},
+
 }
 
 
@@ -15,7 +17,9 @@
   author={Dixit, Satvik and Low, Daniel M and Elbanna, Gasser and Catania, Fabio and Ghosh, Satrajit S},
   journal={ArXiv},
   year={2024},
-  abbr={Emotion}
+  abbr={Emotion},
+  code={https://github.com/satvik-dixit/speech_emotion_recognition},
+  preprint={https://www.arxiv.org/abs/2409.09511},
 }
 
 
@@ -39,6 +43,7 @@
   pages={96--116},
   year={2020},
   preview={figure3_heatmap.jpeg},
+  code={https://github.com/danielmlow/review},
 }
 
 @article{torrente2021sooner,
@@ -83,7 +88,8 @@
   pages={e10},
   year={2022},
   publisher={Cambridge University Press},
-  abbr={Mental health}
+  abbr={Mental health},
+  code={https://github.com/danielmlow/covid19_argentina}
 }
 
 @article{husain2022artificial,
@@ -116,6 +122,7 @@
   volume={13},
   year={2022},
   abbr={Public health},
+  code={https://github.com/danielmlow/covid19_risk}
 }
 
 @article{talkar2023dissociating,
@@ -147,7 +154,8 @@
   author={Zuromski, Kelly L and Low, Daniel M and Jones, Noah and Kuzma, Richard and Kessler, Daniel T and Zhou, Liutong and Kastman, EK and Epstein, Jonathan and Madden, Carlos and Ghosh, SS and others},
   journal={Psychological Medicine},
   year={2024},
-  abbr={NLP+social media}
+  abbr={NLP+social media},
+  code={https://github.com/danielmlow/rallypoint_suicide_detection},
 }
 
 @phdthesis{low2024speech,
@@ -168,7 +176,8 @@
   pages={e0000516},
   year={2024},
   publisher={Public Library of Science San Francisco, CA USA},
-  abbr={ExplainableML} 
+  abbr={ExplainableML},
+  code={https://github.com/danielmlow/vfp}
 }
 
 @inproceedings{abdou2019higher,
@@ -188,4 +197,5 @@
   year={2021},
   preview={dag.png},
   abbr={Causal Inference+NLP},
+  code={https://github.com/danielmlow/playbook_comments},
 }
