--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -17,9 +17,9 @@
   author={Dixit, Satvik and Low, Daniel M and Elbanna, Gasser and Catania, Fabio and Ghosh, Satrajit S},
   journal={ArXiv},
   year={2024},
-  abbr={Emotion},
   code={https://github.com/satvik-dixit/speech_emotion_recognition},
   preprint={https://www.arxiv.org/abs/2409.09511},
+  abbr={Emotion | Explainable ML},
 }
 
 
@@ -31,7 +31,7 @@
   pages={31--41},
   year={2017},
   publisher={Academic Press},
-  abbr={Neuropsychology}
+  abbr={Neuropsychology of language}
 }
 
 @article{low2020automated,
@@ -44,6 +44,7 @@
   year={2020},
   preview={figure3_heatmap.jpeg},
   code={https://github.com/danielmlow/review},
+  abbr={Speech | machine learning}
 }
 
 @article{torrente2021sooner,
@@ -54,7 +55,7 @@
   pages={495--503},
   year={2021},
   publisher={Elsevier},
-  abbr={Mental health},
+  abbr={Mental health | Covid},
 }
 
 @article{abusamra2020cognitive,
@@ -65,7 +66,7 @@
   number={3},
   pages={34},
   year={2020},
-  abbr={Disparities}
+  abbr={Disparities | Psycholinguistics}
 }
 
 @article{low2020natural,
@@ -76,7 +77,7 @@
   number={10},
   year={2020},
   preview={covid_covid19_boolean.jpg},
-  abbr={Social media}
+  abbr={NLP | Social media}
 }
 
 @article{torrente2022psychological,
@@ -88,7 +89,7 @@
   pages={e10},
   year={2022},
   publisher={Cambridge University Press},
-  abbr={Mental health},
+  abbr={Mental health | Covid},
   code={https://github.com/danielmlow/covid19_argentina}
 }
 
@@ -100,7 +101,7 @@
   pages={235--241},
   year={2022},
   publisher={IEEE},
-  abbr={Voice biomarker},
+  abbr={Voice | Covid},
 
 }
 
@@ -112,7 +113,7 @@
   pages={119005},
   year={2022},
   publisher={Academic Press},
-  abbr={NLP & fMRI}
+  abbr={NLP | fMRI}
 }
 
 @article{torrente2022risk,
@@ -122,7 +123,8 @@
   volume={13},
   year={2022},
   abbr={Public health},
-  code={https://github.com/danielmlow/covid19_risk}
+  code={https://github.com/danielmlow/covid19_risk},
+  abbr={Public health | Covid}
 }
 
 @article{talkar2023dissociating,
@@ -134,7 +136,7 @@
   pages={1567},
   year={2023},
   publisher={Nature Publishing Group UK London},
-  abbr={Voice biomarker}
+  abbr={Voice | Covid}
 }
 
 @article{fusaroli2023identifying,
@@ -146,7 +148,7 @@
   pages={3242--3259},
   year={2023},
   publisher={American Speech-Language-Hearing Association},
-  abbr={Causal Inference}
+  abbr={Causal Inference | NLP}
 }
 
 @article{zuromski2024detecting,
@@ -154,7 +156,7 @@
   author={Zuromski, Kelly L and Low, Daniel M and Jones, Noah and Kuzma, Richard and Kessler, Daniel T and Zhou, Liutong and Kastman, EK and Epstein, Jonathan and Madden, Carlos and Ghosh, SS and others},
   journal={Psychological Medicine},
   year={2024},
-  abbr={NLP+social media},
+  abbr={NLP | social media | suicide},
   code={https://github.com/danielmlow/rallypoint_suicide_detection},
 }
 
@@ -176,7 +178,7 @@
   pages={e0000516},
   year={2024},
   publisher={Public Library of Science San Francisco, CA USA},
-  abbr={ExplainableML},
+  abbr={Explainable ML | Bias | Voice},
   code={https://github.com/danielmlow/vfp}
 }
 
@@ -186,7 +188,7 @@
   booktitle={EMNLP},
   pages={5838--5845},
   year={2019},
-  abbr={ExplainableML},
+  abbr={Explainable ML | NLP},
 }
 
 @inproceedings{low2021s,
@@ -196,6 +198,6 @@
   pages={95--103},
   year={2021},
   preview={dag.png},
-  abbr={Causal Inference+NLP},
+  abbr={Causal Inference | NLP},
   code={https://github.com/danielmlow/playbook_comments},
 }
