--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -31,7 +31,7 @@
   pages={31--41},
   year={2017},
   publisher={Academic Press},
-  abbr={Neuropsychology of language}
+  abbr={Neuropsychology}
 }
 
 @article{low2020automated,
@@ -55,7 +55,7 @@
   pages={495--503},
   year={2021},
   publisher={Elsevier},
-  abbr={Mental health | Covid},
+  abbr={Mental health | Covid19},
 }
 
 @article{abusamra2020cognitive,
@@ -66,7 +66,7 @@
   number={3},
   pages={34},
   year={2020},
-  abbr={Disparities | Psycholinguistics}
+  abbr={Disparities}
 }
 
 @article{low2020natural,
@@ -82,7 +82,7 @@
 
 @article{torrente2022psychological,
   title={Psychological symptoms, mental fatigue and behavioural adherence after 72 continuous days of strict lockdown during the COVID-19 pandemic in Argentina},
-  author={Torrente, Fernando and Yoris, Adrian and Low, Daniel and Lopez, Pablo and Bekinschtein, Pedro and V{\'a}zquez, Gustavo H and Manes, Facundo and Cetkovich, Marcelo},
+  author={Torrente, Fernando and Yoris, Adrian and Low, Daniel M and Lopez, Pablo and Bekinschtein, Pedro and V{\'a}zquez, Gustavo H and Manes, Facundo and Cetkovich, Marcelo},
   journal={BJPsych open},
   volume={8},
   number={1},
@@ -95,7 +95,7 @@
 
 @article{husain2022artificial,
   title={Artificial intelligence for detecting covid-19 with the aid of human cough, breathing and speech signals: Scoping review},
-  author={Husain, Mouzzam and Simpkin, Andrew and Gibbons, Claire and Talkar, Tanya and Low, Daniel and Bonato, Paolo and Ghosh, Satrajit S and Quatieri, Thomas and O'Keeffe, Derek T},
+  author={Husain, Mouzzam and Simpkin, Andrew and Gibbons, Claire and Talkar, Tanya and Low, Daniel M and Bonato, Paolo and Ghosh, Satrajit S and Quatieri, Thomas and O'Keeffe, Derek T},
   journal={IEEE Open Journal of Engineering in Medicine and Biology},
   volume={3},
   pages={235--241},
@@ -156,7 +156,7 @@
   author={Zuromski, Kelly L and Low, Daniel M and Jones, Noah and Kuzma, Richard and Kessler, Daniel T and Zhou, Liutong and Kastman, EK and Epstein, Jonathan and Madden, Carlos and Ghosh, SS and others},
   journal={Psychological Medicine},
   year={2024},
-  abbr={NLP | social media | suicide},
+  abbr={NLP | social media},
   code={https://github.com/danielmlow/rallypoint_suicide_detection},
 }
 
@@ -178,7 +178,7 @@
   pages={e0000516},
   year={2024},
   publisher={Public Library of Science San Francisco, CA USA},
-  abbr={Explainable ML | Bias | Voice},
+  abbr={Explainable ML | Voice},
   code={https://github.com/danielmlow/vfp}
 }
 
@@ -193,7 +193,7 @@
 
 @inproceedings{low2021s,
   title={It’s quality and quantity: the effect of the amount of comments on online suicidal posts},
-  author={Low, Daniel M and Zuromski, Kelly L and Kessler, Daniel and Ghosh, Satrajit S and Nock, Matthew and Dempsey, Walter},
+  author={Low, Daniel M and Zuromski, Kelly L and Kessler, Daniel M and Ghosh, Satrajit S and Nock, Matthew and Dempsey, Walter},
   booktitle={Proceedings of the First Workshop on Causal Inference and NLP at EMNLP},
   pages={95--103},
   year={2021},
