--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,15 @@
 @string{aps = {American Physical Society,}}
 
+@article{low2024lexicon,
+  title={Using Generative AI to create lexicons for interpretable text models with high content validity},
+  author={Low, Daniel M. and Rankin, Osiris and Coppersmith, Daniel D. L. and Bentley, Kate H. and Nock, Matthew K. and Ghosh, Satrajit S.},
+  journal={PsyArXiv},
+  year={2024},
+  code={https://github.com/danielmlow/construct-tracker},
+  abbr={NLP | Gen AI},
+  preview={suicide_risk_lexicon_circular_network_combined.png},
+}
+
 @article{chen2024reproschema,
   author    = {Y. Chen and D. Jarecka and S. A. Abraham and R. Gau and E. Ng and D. M. Low and I. Bevers and A. Johnson and A. Keshavan and A. Klein and J. Clucas and Z. Rosli and S. M. Hodge and J. Linkersdörfer and H. Bartsch and S. Das and D. Fair and D. Kennedy and S. S. Ghosh},
   title     = {ReproSchema: Enhancing Research Reproducibility through Standardized Survey Data Collection},
@@ -46,6 +56,8 @@
   code={https://github.com/danielmlow/review},
   abbr={Speech | machine learning}
 }
+
+
 
 @article{torrente2021sooner,
   title={Sooner than you think: A very early affective reaction to the COVID-19 pandemic and quarantine in Argentina},
