--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,7 +2,7 @@
 
 @article{low2024lexicon,
   title={Using Generative AI to create lexicons for interpretable text models with high content validity},
-  author={Low, Daniel M. and Rankin, Osiris and Coppersmith, Daniel D. L. and Bentley, Kate H. and Nock, Matthew K. and Ghosh, Satrajit S.},
+  author={Low, Daniel M and Rankin, Osiris and Coppersmith, Daniel D. L. and Bentley, Kate H. and Nock, Matthew K. and Ghosh, Satrajit S.},
   journal={PsyArXiv},
   year={2024},
   code={https://github.com/danielmlow/construct-tracker},
@@ -174,7 +174,7 @@
 
 @phdthesis{low2024speech,
   title={Speech and text psychometrics: Identifying suicide risk factors with large language models and acoustic networks},
-  author={Low, Daniel M.},
+  author={Low, Daniel M},
   school={Harvard University},
   type={PhD Dissertation},  
   year={2024},
