--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -130,7 +130,7 @@
 
 @article{torrente2022risk,
   title={Risk perception, but also political orientation, modulate behavioral response to COVID-19: a randomized survey experiment},
-  author={Torrente, F and Low, D M and Yoris, A},
+  author={Torrente, Fernando and Low, Daniel M and Yoris, Adrian},
   journal={Frontiers in Psychology},
   volume={13},
   year={2022},
