--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,17 +3,6 @@
 
 @string{aps = {American Physical Society,}}
 
-Dixit S, Low DM, Elbanna G, Catania F, Ghosh SS (2024). Explaining deep learning embeddings for speech emotion recognition by predicting interpretable acoustic variables. Arxiv.
-
-
-@article{dixit2024embeddings,
-  title={Identifying bias in models that detect vocal fold paralysis from audio recordings using explainable machine learning and clinician ratings},
-  author={Dixit, Satvik and Low, Daniel M Elbanna, Gasser and Catania, Fabio and Ghosh, Satrajit S},
-  journal={ArXiv},
-  year={2024},
-}
-
-
 @article{lomlomdjian2017right,
   title={The right hemisphere’s contribution to discourse processing: A study in temporal lobe epilepsy},
   author={Lomlomdjian, Carolina and M{\'u}nera, Claudia P and Low, Daniel M and Terpiluk, Ver{\'o}nica and Sol{\'\i}s, Patricia and Abusamra, Valeria and Kochen, Silvia},
@@ -36,7 +25,7 @@ Dixit S, Low DM, Elbanna G, Catania F, Ghosh SS (2024). Explaining deep learning
 
 @article{torrente2021sooner,
   title={Sooner than you think: A very early affective reaction to the COVID-19 pandemic and quarantine in Argentina},
-  author={Torrente, Fernando and Yoris, A and Low, DM and Lopez, Pablo and Bekinschtein, Pedro and Manes, F and Cetkovich, M},
+  author={Torrente, Fernando and Yoris, A and Low, Daniel M and Lopez, Pablo and Bekinschtein, Pedro and Manes, Facundo and Cetkovich, Marcel},
   journal={Journal of affective disorders},
   volume={282},
   pages={495--503},
@@ -134,7 +123,8 @@ Dixit S, Low DM, Elbanna G, Catania F, Ghosh SS (2024). Explaining deep learning
 @phdthesis{low2024speech,
   title={Speech and text psychometrics: Identifying suicide risk factors with large language models and acoustic networks},
   author={Low, Daniel Mark},
-  year={2024}
+  year={2024},
+  school={Harvard University}
 }
 
 @article{low2024identifying,
@@ -162,4 +152,44 @@ Dixit S, Low DM, Elbanna G, Catania F, Ghosh SS (2024). Explaining deep learning
   booktitle={Proceedings of the First Workshop on Causal Inference and NLP at EMNLP},
   pages={95--103},
   year={2021}
+}
+
+@article{dixit2024explaining,
+  title={Explaining Deep Learning Embeddings for Speech Emotion Recognition by Predicting Interpretable Acoustic Features},
+  author={Dixit, Satvik and Low, Daniel M and Elbanna, Gasser and Catania, Fabio and Ghosh, Satrajit S},
+  journal={arXiv preprint arXiv:2409.09511},
+  year={2024}
+}
+
+@article{low2024using,
+  title={Using large language models to create lexicons for interpretable text models with high content validity: the Suicide Risk Lexicon},
+  author={Low, Daniel M and Rankin, Osiris and Coppersmith, Daniel DL and Bentley, Kate H and Nock, Matthew K and Ghosh, Satrajit S},
+  year={2024},
+  publisher={PsyArXiv}
+}
+
+@article{chen2025standardizing,
+  title={Standardizing survey data collection to enhance reproducibility: Development and comparative evaluation of the ReproSchema ecosystem},
+  author={Chen, Yibei and Jarecka, Dorota and Abraham, Sanu Ann and Gau, Remi and Ng, Evan and Low, Daniel M and Bevers, Isaac and Johnson, Alistair and Keshavan, Anisha and Klein, Arno and others},
+  journal={Journal of medical Internet research},
+  volume={27},
+  pages={e63343},
+  year={2025},
+  publisher={JMIR Publications Toronto, Canada}
+}
+
+@misc{low2025text,
+  title={Text Psychometrics: Assessing Psychological Constructs in Text Using Natural Language Processing},
+  author={Low, Daniel M. and Mair, Patrick and Nock, Matthew K. and Ghosh, Satrajit S.},
+  journal={PsyArXiv},
+  url={https://osf.io/preprints/psyarxiv/9rdux\_v3},
+  year={2025}
+}
+
+@article{herrmann2025exploring,
+  title={Exploring the potential psychological predictors associated with changes in depression, anxiety, and well-being following naturalistic psychedelic use},
+  author={Herrmann, Felipe M and Jones, Grant and Low, Daniel M and Zech, James M and Carhart-Harris, Robin L and Kettner, Hannes},
+  journal={Journal of Psychiatric Research},
+  year={2025},
+  publisher={Elsevier}
 }
