tags in multiple lines

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,6 +10,7 @@
   volume={171},
   pages={31--41},
   year={2017},
+  abbr={Neuropsychology},
   publisher={Academic Press}
 }
 
@@ -20,6 +21,7 @@
   volume={5},
   number={1},
   pages={96--116},
+  abbr={Speech | Machine learning},
   year={2020}
 }
 
@@ -30,6 +32,7 @@
   volume={282},
   pages={495--503},
   year={2021},
+  abbr={Mental health},
   publisher={Elsevier}
 }
 
@@ -40,6 +43,7 @@
   volume={5},
   number={3},
   pages={34},
+  abbr={Neuropsychology},
   year={2020}
 }
 
@@ -49,6 +53,7 @@
   journal={Journal of Medical Internet Research},
   volume={22},
   number={10},
+  abbr={NLP | Social media},
   year={2020}
 }
 
@@ -60,6 +65,7 @@
   number={1},
   pages={e10},
   year={2022},
+  abbr={Public health},
   publisher={Cambridge University Press}
 }
 
@@ -70,6 +76,7 @@
   volume={3},
   pages={235--241},
   year={2022},
+  abbr={Speech | Machine learning},
   publisher={IEEE}
 }
 
@@ -80,6 +87,7 @@
   volume={251},
   pages={119005},
   year={2022},
+  abbr={Neuroimaging | Deep learning},
   publisher={Academic Press}
 }
 
@@ -88,6 +96,7 @@
   author={Torrente, F and Low, D M and Yoris, A},
   journal={Frontiers in Psychology},
   volume={13},
+  abbr={Public health | Social psychology},
   year={2022}
 }
 
@@ -99,6 +108,7 @@
   number={1},
   pages={1567},
   year={2023},
+  abbr={Speech | Machine learning},
   publisher={Nature Publishing Group UK London}
 }
 
@@ -110,6 +120,7 @@
   number={9},
   pages={3242--3259},
   year={2023},
+  abbr={Biomarkers | Causal inference},
   publisher={American Speech-Language-Hearing Association}
 }
 
@@ -117,6 +128,7 @@
   title={Detecting suicide risk among US Servicemembers and Veterans: A deep learning approach using social media data},
   author={Zuromski, Kelly L and Low, Daniel M and Jones, Noah and Kuzma, Richard and Kessler, Daniel T and Zhou, Liutong and Kastman, EK and Epstein, Jonathan and Madden, Carlos and Ghosh, SS and others},
   journal={Psychological Medicine},
+  abbr={Suicide | Deep learning},
   year={2024}
 }
 
